-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
7c928c800 (dev)
-
DaVinci 95, DaVinci 96
https://doc-snapshots.qt.io/qt6-dev/qtglobal.html doesn't show QT_ENABLE_STRICT_MODE_UP_TO documentation, and the deprecated contents don't seem to generate an -obsolete page.
- resulted from
-
QTBUG-123599 Docs snapshots are partially broken
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123622 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 551191,4 | qdoc: Delay processing of \relates meta-command arguments | dev | qt/qttools | Status: MERGED | +2 | 0 |